# toy_compiler

./: Cargo.toml  README.md  a  a.bob  a.s
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  constants.rs  emit.rs  lib.rs  main.rs  pipeline.rs  type_check.rs  utils.rs  x86_ast.rs
crates/compiler/src/parser/: mod.rs  to_ast.rs  tokenizer.rs
crates/compiler/src/passes/: closurize_functions.rs  closurize_lambdas.rs  declosurize_calls.rs  disambiguate_subscript.rs  globalize_functions.rs  globalize_identifiers.rs  inject_allocations.rs  mod.rs  optimize_fallthrough.rs  partial_eval.rs  patch_instructions.rs  prelude_conclusion.rs  remove_complex_operands.rs  remove_jumps.rs  resolve_width.rs  short_circuiting.rs  translate_ast_to_ir.rs  translate_ir_to_x86.rs  tupleize_excess_args.rs  type_check.rs
crates/compiler/src/passes/register_allocation/: dataflow_analysis.rs  graph_coloring.rs  mod.rs
crates/compiler/src/syntax_trees/: ast.rs  ir.rs  mod.rs  shared.rs  x86.rs
crates/compiler/src/syntax_trees/parser/: mod.rs  parse_tree.rs  to_ast.rs  tokenizer.rs
crates/compiler/tests/: test_arrays.rs  test_ast_to_ir.rs  test_expr.rs  test_functions.rs  test_if.rs  test_lambdas.rs  test_loop.rs  test_parser.rs  test_partial_eval.rs  test_patch_instructions.rs  test_register_allocation.rs  test_remove_complex_operands.rs  test_short_circuiting.rs  test_tuple.rs  test_vars.rs  utils.rs
homework/: hw1.md  hw2.md
runtime/: runtime.c  runtime.h
src/: ast.rs  ir.rs  lib.rs  main.rs  partial_eval.rs  pipeline.rs  utils.rs  x86_ast.rs
tests/: L_int_test.rs  (+10 more)
(+40 files in other folders)
