[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield-struct = "0.12.1"
clap = { version = "4.5.54", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
enum_dispatch = "0.3.13"
indexmap = "2.13.0"
peg = "0.8.5"
petgraph = "0.8.3"

[dev-dependencies]
test-support = { path = "../test-support" }